--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "watch": "webpack --hide-modules --mode=development --watch",
-    "production": "webpack --hide-modules --mode=production"
+    "production": "webpack --hide-modules --mode=production",
+    "predeploy": "npm run production",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/ac524/instructor-utilities/issues"
   },
-  "homepage": "https://github.com/ac524/instructor-utilities#readme",
+  "homepage": "https://ac524.github.io/instructor-utilities/",
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
@@ -25,6 +27,7 @@
     "autoprefixer": "^9.8.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "gh-pages": "^2.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
