--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Tools and utilities built for helping assist instructing bootcamp classes",
   "private": true,
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --hide-modules --mode=development --watch",
     "production": "webpack --hide-modules --mode=production",
     "predeploy": "npm run production",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
