--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tools and utilities built for helping assist instructing bootcamp classes",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Skip testing\" && exit 0",
     "watch": "webpack --hide-modules --mode=development --watch",
     "production": "webpack --hide-modules --mode=production",
     "predeploy": "npm run production",
