--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "webpack --hide-modules --mode=development --watch",
     "production": "webpack --hide-modules --mode=production",
     "predeploy": "npm run production",
-    "deploy": "gh-pages -d public"
+    "deploy": "gh-pages"
   },
   "repository": {
     "type": "git",
