--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
   },
   "homepage": "https://ac524.github.io/instructor-utilities/",
   "devDependencies": {
+    "gh-pages": "^2.2.0",
+    "jest": "^26.0.1",
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "@babel/core": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.10.2",
@@ -33,16 +39,10 @@
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
-    "gh-pages": "^2.2.0",
-    "jest": "^26.0.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "path": "^0.12.7"
+    "sass-loader": "^8.0.2"
   }
 }
