--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://ac524.github.io/instructor-utilities/",
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "jest": "^26.0.1",
+    "jest": "^26.0.1"
   },
   "dependencies": {
     "express": "^4.17.1",
