--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "watch": "webpack --hide-modules --mode=development --watch",
-    "build": "npm run production",
     "production": "webpack --hide-modules --mode=production",
+    "build": "npm run production",
     "start": "node server.js",
     "predeploy": "npm run production",
     "deploy": "gh-pages -d public"
@@ -26,11 +26,7 @@
   "homepage": "https://ac524.github.io/instructor-utilities/",
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "jest": "^26.0.1"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "path": "^0.12.7",
+    "jest": "^26.0.1",
     "@babel/core": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.10.2",
@@ -44,5 +40,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
