--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "watch": "webpack --hide-modules --mode=development --watch",
     "production": "webpack --hide-modules --mode=production",
     "build": "npm run production",
-    "start": "node server.js",
-    "predeploy": "npm run production",
-    "deploy": "gh-pages -d public"
+    "start": "node server.js"
   },
   "heroku-run-build-script": true,
   "repository": {
@@ -25,8 +23,6 @@
   },
   "homepage": "https://ac524.github.io/instructor-utilities/",
   "devDependencies": {
-    "gh-pages": "^2.2.0",
-    "jest": "^26.0.1",
     "@babel/core": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.10.2",
@@ -35,11 +31,12 @@
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "express": "^4.17.1"
