--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "express-handlebars-sections": "^1.0.1"
   }
 }
