added isAuthenticated file and authApiRoutes.js

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-handlebars": "^4.0.4",
     "express-handlebars-sections": "^1.0.1",
     "mysql2": "^2.1.0",
+    "path": "^0.12.7",
     "sequelize": "^6.2.4"
   }
 }
