--- a/package.json
+++ b/package.json
@@ -39,10 +39,15 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-handlebars-sections": "^1.0.1",
+    "express-session": "^1.17.1",
     "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.2.4"
   }
 }
