--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,5 +1,7 @@
 const path = require('path');
 
+require('dotenv').config();
+
 module.exports = {
-  'config': path.resolve('config', 'config.js')
+    'config': path.resolve(__dirname, 'config', 'config.js')
 }
