--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "watch": "webpack --hide-modules --mode=development --watch",
+    "watch": "npm-run-all --parallel watch:server watch:build",
+    "watch:build": "webpack --hide-modules --mode=development --watch",
+    "watch:server": "nodemon server.js",
     "production": "webpack --hide-modules --mode=production",
+    "envsetup": "node setup",
     "build": "npm run production",
-    "start": "node server.js",
-    "watchapp": "nodemon server.js"
+    "start": "node server.js"
   },
   "heroku-run-build-script": true,
   "repository": {
@@ -36,6 +38,7 @@
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "webpack": "^4.43.0",
