--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "scripts": {
     "test": "jest",
+    "envsetup": "node setup",
     "watch": "npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --hide-modules --mode=development --watch",
     "watch:server": "nodemon server.js",
-    "production": "webpack --hide-modules --mode=production",
-    "envsetup": "node setup",
-    "build": "npm run production",
-    "start": "node server.js"
+    "build": "webpack --hide-modules --mode=production",
+    "start": "node server.js",
+    "production": "npm-run-all build start"
   },
   "heroku-run-build-script": true,
   "repository": {
