--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "envsetup": "node setup",
     "watch": "npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --hide-modules --mode=development --watch",
-    "watch:server": "nodemon server.js",
+    "watch:server": "nodemon app/server.js --watch app/",
     "build": "webpack --hide-modules --mode=production",
-    "start": "node server.js",
+    "start": "node app/server.js",
     "production": "npm-run-all build start"
   },
   "heroku-run-build-script": true,
