--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
+    "sequelize-cli": "^6.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
