--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.9.6",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.4",
     "autoprefixer": "^9.8.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
@@ -34,6 +35,8 @@
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "sass-loader": "^8.0.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
