--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
     "autoprefixer": "^9.8.0",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
+    "bulma": "^0.9.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^3.5.3",
     "inquirer": "^7.3.2",
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
+    "react-bulma-components": "^3.4.0",
     "react-dom": "^16.13.1",
     "sass-loader": "^8.0.2",
     "sequelize-cli": "^6.2.0",
