--- a/package.json
+++ b/package.json
@@ -1,67 +1,37 @@
 {
-  "name": "instructor-utilities",
+  "name": "redux-mini-project",
   "version": "1.0.0",
-  "description": "Tools and utilities built for helping assist instructing bootcamp classes",
-  "private": true,
+  "description": "",
+  "main": "app/server.js",
   "scripts": {
-    "test": "exit 0",
-    "envsetup": "node setup",
-    "watch": "npm-run-all --parallel watch:server watch:build",
-    "watch:build": "webpack --hide-modules --mode=development --watch",
-    "watch:server": "nodemon app/server.js --watch app/",
-    "build": "webpack --hide-modules --mode=production",
-    "start": "node app/server.js",
-    "production": "npm-run-all build start"
+    "envsetup": "node envsetup",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node app/server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
-  "heroku-run-build-script": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ac524/instructor-utilities.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ac524/instructor-utilities/issues"
-  },
-  "homepage": "https://ac524.github.io/instructor-utilities/",
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.4",
-    "autoprefixer": "^9.8.0",
-    "babel-jest": "^26.0.1",
-    "babel-loader": "^8.1.0",
-    "bulma": "^0.9.0",
-    "copy-webpack-plugin": "^6.0.1",
-    "css-loader": "^3.5.3",
-    "inquirer": "^7.3.2",
-    "jest": "^26.0.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^3.0.0",
-    "react": "^16.13.1",
-    "react-bulma-components": "^3.4.0",
-    "react-dom": "^16.13.1",
-    "sass-loader": "^8.0.2",
-    "sequelize-cli": "^6.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^4.0.4",
-    "express-handlebars-sections": "^1.0.1",
+    "express": "^4.16.3",
     "express-session": "^1.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.16",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "sequelize": "^6.2.4"
+    "sequelize": "^6.3.4"
   }
 }
