--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "axios": "^0.18.0",
+    "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "cross-env": "^7.0.2",
     "node-sass": "^4.14.1",
-    "react": "^16.6.3",
+    "react": "^16.13.1",
     "react-bulma-components": "^3.4.0",
-    "react-dom": "^16.6.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^2.1.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=./src react-scripts start",
