--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,18 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
-    "cross-env": "^7.0.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
-    "start": "cross-env NODE_PATH=./src react-scripts start",
-    "build": "cross-env NODE_PATH=./src react-scripts build",
-    "test": "cross-env NODE_PATH=./src react-scripts test --env=jsdom",
-    "eject": "cross-env NODE_PATH=./src react-scripts eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
