--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
