--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
@@ -34,6 +32,7 @@
     "mongoose": "^5.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "socket.io": "^2.3.0",
     "validator": "^13.1.1"
   }
 }
