--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "http-proxy-middleware": "^1.0.5",
     "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
@@ -34,6 +35,7 @@
     "passport-jwt": "^4.0.0",
     "passport-jwt.socketio": "^0.1.1",
     "socket.io": "^2.3.0",
+    "socketio-jwt": "^4.6.2",
     "validator": "^13.1.1"
   }
 }
