Getting started with sendgrid for emails. First application will be to build in email verification.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.5",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
