--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sendgrid/mail": "^7.2.5",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "http-proxy-middleware": "^1.0.5",
