--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0",
+    "copy-paste": "^1.3.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
