--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bulma-components": "^3.4.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
