--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "copy-paste": "^1.3.0",
+    "inquirer": "^7.3.3",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
