--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "bulma": "^0.9.0",
     "bulma-slider": "^2.0.4",
+    "jwt-decode": "^3.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bulma-components": "^3.4.0",
