--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mjml": "^4.7.1",
     "mongoose": "^5.10.11",
+    "nodemailer": "^6.4.15",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^2.3.0",
