--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bulma": "^0.9.1",
     "bulma-slider": "^2.0.4",
     "jwt-decode": "^3.1.1",
+    "luxon": "^1.25.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bulma-components": "^3.4.0",
