--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-mini-project",
-  "version": "0.5.2",
-  "description": "",
+  "name": "crsm",
+  "version": "0.5.3",
+  "description": "Classroom student management utilities for instructors to effectively organize and keep track of student progress with a team of staff members.",
   "main": "app/server.js",
   "scripts": {
     "envsetup": "node envsetup",
