--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "fastest-validator": "^1.9.0",
     "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
