--- a/package.json
+++ b/package.json
@@ -31,14 +31,12 @@
     "express": "^4.16.3",
     "fastest-validator": "^1.9.0",
     "if-env": "^1.0.4",
-    "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mjml": "^4.7.1",
     "mongoose": "^5.10.14",
     "nodemailer": "^6.4.16",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "socket.io": "^2.3.0",
-    "validator": "^13.1.17"
+    "socket.io": "^2.3.0"
   }
 }
