--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mjml": "^4.7.1",
     "mongoose": "^5.10.14",
     "nodemailer": "^6.4.16",
+    "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^2.3.0"
