File reorganization - Moved seed folder to project root. - Move mail folder out of the /config folder into the /app. - Moved the validation folder into the /config folder. - Wrapped all express features in callable functions.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:prod": "node app/server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "seed": "node app/seed",
+    "seed": "node seed",
     "seed:reset": "node app/seed/reset",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
