--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "concurrently": "^5.3.0",
     "inquirer": "^7.3.3",
     "mocha": "^8.2.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "nyc": "^15.1.0",
+    "sinon": "^9.2.1"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.0",
@@ -38,7 +40,6 @@
     "mjml": "^4.7.1",
     "mongoose": "^5.10.14",
     "nodemailer": "^6.4.16",
-    "nyc": "^15.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^2.3.0"
