Adding back in unit tests.

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "postinstall": "link-module-alias",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build",
-    "test": "exit 0",
-    "testreal": "node test/run"
+    "test": "node test/run"
   },
   "author": "",
   "license": "ISC",
