Added migrate tool to help will first time compile of all aggretate date.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app/server.js",
   "_moduleAliases": {
     "~crsm": "./app",
+    "~crsmmodels": "./app/controllers/definitions/models",
     "~crsmtest": "./test"
   },
   "scripts": {
