--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.4",
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "bulma-slider": "^2.0.4",
