--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "bulma": "^0.9.2",
     "bulma-slider": "^2.0.4",
+    "draft-js": "^0.11.7",
     "jwt-decode": "^3.1.2",
     "luxon": "^1.26.0",
     "node-sass": "^5.0.0",
