--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.4",
+    "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "crypto": "^1.0.1",
     "dotenv": "^9.0.2",
     "express": "^4.16.3",
     "fastest-validator": "^1.11.0",
+    "graphql": "^16.0.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mjml": "^4.9.3",
