--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "dotenv": "^9.0.2",
     "express": "^4.16.3",
     "fastest-validator": "^1.11.0",
-    "graphql": "^16.0.1",
+    "graphql": "^15.7.2",
+    "graphql-modules": "^2.0.0",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mjml": "^4.9.3",
