--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
-    "sinon": "^10.0.0"
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.7.0"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.4",
