Dependency updates - chai@4.3.4 -> chai@4.3.6 - concurrently@6.2.0 -> concurrently@7.0.0 - inquirer@8.1.0 -> inquirer@8.2.0 - mocha@8.4.0 -> mocha@9.2.0 - nodemon@2.0.7 -> nodemon@2.0.15 - sinon@10.0.0 -> sinon@13.0.1 - @sendgrid/mail@7.4.4 -> @sendgrid/mail@7.6.1 - apollo-server-core@3.5.0 -> apollo-server-core@3.6.3 - apollo-server-express@3.5.0 -> apollo-server-express@3.6.3 - dotenv@9.0.2 -> dotenv@16.0.0 - express@4.16.3 -> express@4.17.2 - fastest-validator@1.11.0 -> fastest-validator@1.12.0 - graphql@15.7.2 -> graphql@15.8.0 - mjml@4.9.3 -> mjml@4.12.0 - mongoose@5.12.11 -> mongoose@5.13.14 - nodemailer@6.6.1 -> nodemailer@6.7.2 - passport@0.4.1 -> passport@0.5.2 - socket.io@4.1.2 -> socket.io@4.4.1

--- a/package.json
+++ b/package.json
@@ -25,37 +25,36 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "concurrently": "^6.2.0",
-    "inquirer": "^8.1.0",
-    "link-module-alias": "^1.2.0",
-    "mocha": "^8.4.0",
-    "nodemon": "^2.0.7",
-    "nyc": "^15.1.0",
-    "sinon": "^10.0.0",
-    "sinon-chai": "^3.7.0"
+    "chai": "4.3.6",
+    "chai-as-promised": "7.1.1",
+    "concurrently": "7.0.0",
+    "inquirer": "8.2.0",
+    "link-module-alias": "1.2.0",
+    "mocha": "9.2.0",
+    "nodemon": "2.0.15",
+    "nyc": "15.1.0",
+    "sinon": "13.0.1",
+    "sinon-chai": "3.7.0"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.4.4",
-    "apollo-server-core": "^3.5.0",
-    "apollo-server-express": "^3.5.0",
-    "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
-    "crypto": "^1.0.1",
-    "dotenv": "^9.0.2",
-    "express": "^4.16.3",
-    "fastest-validator": "^1.11.0",
-    "graphql": "^15.7.2",
-    "graphql-modules": "^2.0.0",
-    "graphql-type-json": "^0.3.2",
-    "if-env": "^1.0.4",
-    "jsonwebtoken": "^8.5.1",
-    "mjml": "^4.9.3",
-    "mongoose": "^5.12.11",
-    "nodemailer": "^6.6.1",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "socket.io": "^4.1.2"
+    "@sendgrid/mail": "7.6.1",
+    "apollo-server-core": "3.6.3",
+    "apollo-server-express": "3.6.3",
+    "bcryptjs": "2.4.3",
+    "compression": "1.7.4",
+    "dotenv": "16.0.0",
+    "express": "4.17.2",
+    "fastest-validator": "1.12.0",
+    "graphql": "15.8.0",
+    "graphql-modules": "2.0.0",
+    "graphql-type-json": "0.3.2",
+    "if-env": "1.0.4",
+    "jsonwebtoken": "8.5.1",
+    "mjml": "4.12.0",
+    "mongoose": "5.13.14",
+    "nodemailer": "6.7.2",
+    "passport": "0.5.2",
+    "passport-jwt": "4.0.0",
+    "socket.io": "4.4.1"
   }
 }
